--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -2,30 +2,35 @@
 <html ng-app="NarrowItDownApp" lang="en">
   <head>
     <title>Narrow Down Your Menu Choice</title>
-	<meta charset="utf-8"/>
+    <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles/bootstrap.min.css">
     <link rel="stylesheet" href="styles/styles.css">
   </head>
-<body>
-   <div class="container" ng-controller="NarrowItDownController as narrowItDown"> 
-    <h1>Narrow Down Your Chinese Menu Choice</h1>
-	<div class="form-group">
-      <input type="text" ng-model="searchTerm" placeholder="search term" class="form-control">
+  <body>
+    <div class="container" ng-controller="NarrowItDownController as list">
+      <h1>Narrow Down Your Chinese Menu Choice</h1>
+
+      <div class="form-group">
+        <input type="text" ng-model="list.searchTerm" placeholder="search term" class="form-control">
+      </div>
+
+      <div class="form-group narrow-button">
+        <button class="btn btn-primary" ng-click="list.searchMenu();" >Narrow It Down For Me!</button>
+      </div>
+
+      <br/>
+
+      <div id="result" class="row">
+        <found-items
+        found="list.found"
+        empty="list.empty"
+        on-remove="list.removeItem(index)">
+        </found-items>
+      </div>
     </div>
-    <div class="form-group narrow-button">
-      <button class="btn btn-primary" ng-click="narrowItDown.searchMenu(searchTerm);" >Narrow It Down For Me!</button>
-    </div>
-	<br/>
-	<div id="result" class="row">
-	<found-items
-        found="narrowItDown.found"
-		message = "{{narrowItDown.message}}"
-        on-remove="narrowItDown.removeItem(index)">
-	</found-items>
-	</div>
-  </div>
-  	<script src="angular.min.js"></script>
+
+    <script src="angular.min.js"></script>
     <script src="app.js"></script>
-</body>
+  </body>
 </html>
