--- a/module4-solution/index.html
+++ b/module4-solution/index.html
@@ -2,6 +2,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Menu App</title>
+        <link rel="stylesheet" href="css/style.css"></link>
 	</head>
 	<body>
     <h1>Menu App built with AngularJS</h1>
