--- a/module1-solution/index.html
+++ b/module1-solution/index.html
@@ -1,6 +1,7 @@
 <html ng-app="LunchCheck">
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel='shortcut icon' type='image/x-icon' href='favicon.ico'/>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<style>
 		body{
