--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -4,6 +4,7 @@
     <title>Narrow Down Your Menu Choice</title>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel='shortcut icon' type='image/x-icon' href='favicon.ico'/>
     <link rel="stylesheet" href="styles/bootstrap.min.css">
     <link rel="stylesheet" href="styles/styles.css">
   </head>
