--- a/module4-solution/index.html
+++ b/module4-solution/index.html
@@ -2,6 +2,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Menu App</title>
+        <link rel='shortcut icon' type='image/x-icon' href='favicon.ico'/>
         <link rel="stylesheet" href="css/style.css"></link>
 	</head>
 	<body>
