--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<a href="https://gauravshah786.github.io/webdev-yaakov/module2-solution/"> Module 2 Assignment</a><br/>
 			<a href="https://gauravshah786.github.io/webdev-yaakov/module3-solution/"> Module 3 Assignment</a><br/>
 			<a href="https://gauravshah786.github.io/webdev-yaakov/module4-solution/"> Module 4 Assignment</a><br/>
-			<a href="https://gauravshah786.github.io/webdev-yaakov/module5-solution/"> Module 5 Assignment</a><br/>
+			<a href="https://gauravshah786.github.io/webdev-yaakov/module5-solution/"> Module 5 Assignment</a> - Restaurant Website created as part of Course<br/>
 		</div>
 </body>
 </html>
